fixed line clipping path implementation

--- a/src/styles/charts/line.scss
+++ b/src/styles/charts/line.scss
@@ -3,7 +3,7 @@
 .chart {
 
     .masking-rectangle {
-        fill: none;
+        fill: $white;
     }
 
     .x.axis, .y.axis, .y2.axis {
